# opencv-projects

./: .gitignore  CMakeLists.txt
3DCoordsEstimation/: cameraCalibration.cpp  epipolarLines.cpp  main.cpp
BasicMorphology/: main.cpp
BasicShapeDetection/: main.cpp
BasicStereoVision/: main.cpp
BinaryVision/: main.cpp
CameraCalibration/: main.cpp
ColorDetection/: main.cpp
ColorSegmentation/: main.cpp
CornerDetection/: harrisCornerDetection.cpp  main.cpp  shiTomasiCornerDetection.cpp
DepthMapStereoImages/: main.cpp
DiscreteFourierTransform/: dftImplementation.cpp  main.cpp
DocumentScanner/: main.cpp
EpipolarGeometry/: main.cpp
FaceTracking/: main.cpp
Histograms/: main.cpp
ImageWarping/: main.cpp
LicensePlateDetector/: main.cpp
TemplateMatching/: findAllMatches.cpp  findMatch.cpp
VirtualPainter/: ColorPicker.cpp  VirtualPainter.cpp  main.cpp
